syntax = "proto3";

option go_package = "/pb";

service ManagePostsService{
    rpc Create(NewPostRequest) returns (CreateResponse);
    rpc GetByID(IdRequest) returns (PostResponse);
    rpc Update(UpdateRequest) returns (PostResponse);
    rpc Delete(IdRequest) returns (DeleteResponse);
}

message NewPostRequest {
    int64 user_id = 1;
    string title = 2;
    string body = 3;
    int64 page = 4;
}

message CreateResponse {
    int64 id = 1;
}

message IdRequest {
    int64 id = 1;
}

message PostResponse {
    int64 id = 1;
    int64 original_post_id = 2;
    int64 user_id = 3;
    string title = 4;
    string body = 5;
    int64 page = 6;
}

message DeleteResponse {
    map<string, string> msg = 1;
}

message UpdateRequest {
    int64 id = 1;
    int64 user_id = 2;
    string title = 3;
    string body = 4;
    int64 page = 5;
}